# julia-set

./: CMakeLists.txt  README.md  compile_commands.json  conanfile.py  main.c
include/: render.h  shader.h
lib/: glad
resources/shaders/: julia_set.frag  mandelbrot_set.frag  shader.frag  shader.fs  shader.vs
source/: linear_set.c  linear_set.h  render.c  render.h  shader.c
src/: linear_set.c  render.c  shader.c
